# TERRA-NG

./: .gitignore  CMakeLists.txt  README.md  config_C1_lvl7_cfl15.toml  config_C1_lvl8_cfl15.toml  submit_mc_C1_lvl6_cfl15.py  submit_mc_C1_lvl7_cfl15.py  submit_mc_C1_lvl8_cfl15.py
.github/workflows/: ci.yml
apps/benchmarks/performance/: CMakeLists.txt  benchmark_alt.cpp  benchmark_alt_fe.cpp  benchmark_bandwidth.cpp  benchmark_bandwidth_raw.cpp  benchmark_baseline.cpp  benchmark_laplace.cpp  benchmark_operators.cpp
apps/benchmarks/performance/sweep_scripts/: plot_matrix.py  run_matrix_sweep.sh
apps/mantlecirculation/: benchmark_validation.md  config_A3_lvl6_supg_cfl025.toml  config_C1_lvl6.toml  config_C1_lvl6_cfl15.toml  config_C1_lvl6_supg_cfl05_picard2.toml  config_C1_lvl7.toml  config_C1_lvl7_cfl15.toml  config_C3_lvl6_supg_cfl025_picard2.toml  config_C3_lvl6_supg_cfl05_picard2.toml  mantlecirculation.cpp  plot_nu_and_profiles.py  plot_nu_vs_simtime.py  run_mc_16gpu.sh  submit_mc_A3_lvl6_supg_cfl025.py  submit_mc_C1_lvl6_cfl15.py  submit_mc_C1_lvl7_cfl15.py  submit_mc_C1_lvl8_cfl15.py  submit_mc_C3_lvl6_supg_cfl025_picard2.py  submit_mc_sng2.py
apps/mantlecirculation/bench_mt/: collect_bench_mt.py  config_bench_A3.toml  plot_kernel_vs_comm.py  plot_rad11_substeps.py  submit_bench_bo_weak_rad.py  submit_bench_mt.py  submit_bench_mt_jb.py  submit_bench_mt_lumi.py  submit_bench_mt_mn5.py  submit_bench_operators_lumi.py
apps/mantlecirculation/job_scripts/: mc_C1_lvl7_sdr1.sh
apps/mantlecirculation/parameterfiles/: config_A3_lvl6_ev_cfl05.toml  config_A3_lvl6_fct_cfl025.toml  config_A3_lvl6_supg_cfl025.toml  config_A3_lvl6_supg_cfl025_latonly.toml  config_A3_lvl6_supg_cfl025_radonly.toml  config_C1_lvl6_ev_cfl05_picard2.toml  config_C1_lvl6_fct_cfl05_picard2.toml  config_C1_lvl6_supg_cfl05_picard2.toml  config_C1_lvl6_supg_cfl05_picard2_latonly.toml  config_C1_lvl6_supg_cfl05_picard2_radonly.toml  config_C3_lvl6_ev_cfl05_picard2.toml  config_C3_lvl6_fct_cfl025_picard2.toml  config_C3_lvl6_supg_cfl025_picard2.toml  config_C3_lvl6_supg_cfl025_picard2_latonly.toml  config_C3_lvl6_supg_cfl025_picard2_radonly.toml  config_C4_lvl6_ev_cfl05_picard2.toml  config_C5_lvl6_ev_cfl05_picard2.toml  config_fscmb_nsurf_lvl6_10steps.toml  submit_mc_lumi.py
apps/mantlecirculation/src/: build_radii.hpp  diagnostics.hpp  energy_solver.hpp  hbm_probe.hpp  interpolators.hpp  io.hpp  low_prec_vcycle.hpp  parameters.hpp  polymorphic_schur_preconditioner.hpp  stokes_solver.hpp  temperature_init.hpp  wbfbt_pressure_poisson.hpp  wbfbt_pressure_poisson_explicit_kw.hpp  wbfbt_schur_preconditioner.hpp  wbfbt_weighted_lumped_velocity_mass.hpp
data/scripts/plotting/: plot_nu_and_profiles.py
doc/: entropy_viscosity.md
doc/doxygen_and_pages/: Doxyfile
doc/doxygen_and_pages/documentation/cluster-setup/: LUMI-G.md  cachemiss-lmu.md
doc/doxygen_and_pages/documentation/framework/: 06b_anisotropic_refinement.md  10_boundary_conditions.md  12_entropy_viscosity.md  13_stokes.md  14_freeslip_stokes.md  14_validation_scenarios  15_entropy_viscosity.md  framework.md
doc/epsdivdiv_benchmarks/: build_history_table_and_roofline.py  history_phases.csv  history_phases.md  plot_roofline.py  plot_roofline_h100.py  plot_roofline_mi250x.py  remeasure_history.sh  remeasure_history_ncu_lean.sh  wave_and_hex_kernels.md
src/terra/: CMakeLists.txt
src/terra/communication/: buffer_copy_kernels.hpp
src/terra/communication/shell/: CMakeLists.txt  communication.hpp  communication_plan.hpp  fv_communication.hpp  redistribute.hpp
src/terra/fe/wedge/operators/shell/: CMakeLists.txt  boundary_mass.hpp  centered_rk2_advection_diffusion.hpp  divergence.hpp  divergence_kerngen.hpp  entropy_viscosity.hpp  epsilon_divdiv_hex.hpp  gradient.hpp  (+18 more)
src/terra/fv/hex/: conversion.hpp  helpers.hpp
src/terra/fv/hex/operators/: advection_diffusion.hpp  fct_advection_diffusion.hpp  geometry_helper.hpp  mass.hpp
src/terra/geophysics/viscosity/: viscosity_interpolation.hpp
src/terra/grid/: bit_masks.hpp  grid_types.hpp
src/terra/grid/shell/: CMakeLists.txt  agglomerated_distribution.hpp  bit_masks.hpp  spherical_shell.hpp
src/terra/io/: vtk.hpp  xdmf.hpp
src/terra/kernels/common/: grid_operations.hpp
src/terra/kokkos/: kokkos_wrapper.hpp
src/terra/linalg/: vector.hpp  vector_fv.hpp  vector_q1.hpp  vector_q1isoq2_q1.hpp
src/terra/linalg/solvers/: chebyshev.hpp  fgmres.hpp  fgmres_lowmem.hpp  multigrid.hpp  pcg.hpp  power_iteration.hpp  velocity_prec_handle.hpp
src/terra/linalg/solvers/gca/: gca.hpp
src/terra/linalg/trafo/: local_basis_trafo_normal_tangential.hpp
src/terra/linalg/util/: debug_sparse_assembly.hpp
src/terra/mpi/: CMakeLists.txt  level_comms.hpp  mpi.hpp
src/terra/shell/: radial_profiles.hpp  spherical_harmonics.hpp
src/terra/util/: table.hpp  timer.hpp
tests/: CMakeLists.txt  gca_fixed.hpp  plot_convergence_1pt_vs_6pt.py  test_agglomerated_multigrid.cpp  test_divergence_fast_vs_slow.cpp  test_divergence_perf.cpp  test_epsilon_divdiv_ablock_mg_gca.cpp  test_epsilon_divdiv_cg_hex.cpp  test_epsilon_divdiv_hex_vs_default.cpp  test_epsilon_divdiv_stokes.cpp  test_epsilon_divdiv_stokes_anisotropic.cpp  test_epsilon_divdiv_stokes_v02_comparison.cpp  test_epsilon_divdiv_wave_vs_default.cpp  test_epsilon_divdiv_wave_vs_default_NN.cpp  test_ev_advection_diffusion.cpp  test_ev_rotation.cpp  test_fe_fv_roundtrip.cpp  test_finite_volume_rotation.cpp  test_gradient_fast_vs_slow.cpp  test_gradient_perf.cpp  test_redistribute.cpp  test_shear_heating.cpp  test_supg_fast_vs_slow.cpp  test_supg_perf.cpp  test_supg_rotation.cpp  test_unsteady_advection_diffusion_supg_2.cpp
(+12 files in other folders)
